module11-ingress/exercises/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.minikube.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app1-service
            port:
              number: 80
  - host: app2.minikube.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app2-service
            port:
              number: 80
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: web-app1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: web-app2-service
            port:
              number: 80
